--- a/SpacesForChildren/SpacesForChildren/Web.config
+++ b/SpacesForChildren/SpacesForChildren/Web.config
@@ -11,8 +11,8 @@
   <connectionStrings>
     <add name="SpacesForChildren"
          connectionString="Data Source=(LocalDb)\MSSQLLocalDB;
-         AttachDbFilename=|DataDirectory|\TrabalhoPratico.mdf;
-         Initial Catalog=TrabalhoPratico;Integrated Security=True"
+         AttachDbFilename=|DataDirectory|\DefaultConnections.mdf;
+         Initial Catalog=DefaultConnections;Integrated Security=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
