--- a/SpacesForChildren/SpacesForChildren/SpacesForChildren.csproj
+++ b/SpacesForChildren/SpacesForChildren/SpacesForChildren.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -248,11 +249,40 @@
     <Compile Include="Migrations\201801061828550_display-updatev1.Designer.cs">
       <DependentUpon>201801061828550_display-updatev1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801061956247_add-institution-to-contract.cs" />
+    <Compile Include="Migrations\201801061956247_add-institution-to-contract.Designer.cs">
+      <DependentUpon>201801061956247_add-institution-to-contract.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801070043427_display-name.cs" />
+    <Compile Include="Migrations\201801070043427_display-name.Designer.cs">
+      <DependentUpon>201801070043427_display-name.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801070102055_display-name-addded-on-contract.cs" />
+    <Compile Include="Migrations\201801070102055_display-name-addded-on-contract.Designer.cs">
+      <DependentUpon>201801070102055_display-name-addded-on-contract.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801071112349_display-format-data-from-YYYY-to-yyyy.cs" />
+    <Compile Include="Migrations\201801071112349_display-format-data-from-YYYY-to-yyyy.Designer.cs">
+      <DependentUpon>201801071112349_display-format-data-from-YYYY-to-yyyy.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801071211324_contract-approvation.cs" />
+    <Compile Include="Migrations\201801071211324_contract-approvation.Designer.cs">
+      <DependentUpon>201801071211324_contract-approvation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801071212481_contract-approvation-name.cs" />
+    <Compile Include="Migrations\201801071212481_contract-approvation-name.Designer.cs">
+      <DependentUpon>201801071212481_contract-approvation-name.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801071256163_contract-eapprovation-enum.cs" />
+    <Compile Include="Migrations\201801071256163_contract-eapprovation-enum.Designer.cs">
+      <DependentUpon>201801071256163_contract-eapprovation-enum.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Activity.cs" />
     <Compile Include="Models\Child.cs" />
     <Compile Include="Models\Contract.cs" />
+    <Compile Include="Models\EApprovation.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Institution.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -287,8 +317,6 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
@@ -358,6 +386,7 @@
     <Content Include="Views\Activities\Details.cshtml" />
     <Content Include="Views\Activities\Edit.cshtml" />
     <Content Include="Views\Activities\Index.cshtml" />
+    <Content Include="Views\Contracts\mainCreate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -405,6 +434,27 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801061828550_display-updatev1.resx">
       <DependentUpon>201801061828550_display-updatev1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801061956247_add-institution-to-contract.resx">
+      <DependentUpon>201801061956247_add-institution-to-contract.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801070043427_display-name.resx">
+      <DependentUpon>201801070043427_display-name.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801070102055_display-name-addded-on-contract.resx">
+      <DependentUpon>201801070102055_display-name-addded-on-contract.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801071112349_display-format-data-from-YYYY-to-yyyy.resx">
+      <DependentUpon>201801071112349_display-format-data-from-YYYY-to-yyyy.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801071211324_contract-approvation.resx">
+      <DependentUpon>201801071211324_contract-approvation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801071212481_contract-approvation-name.resx">
+      <DependentUpon>201801071212481_contract-approvation-name.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801071256163_contract-eapprovation-enum.resx">
+      <DependentUpon>201801071256163_contract-eapprovation-enum.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
