--- a/SpacesForChildren/SpacesForChildren/SpacesForChildren.csproj
+++ b/SpacesForChildren/SpacesForChildren/SpacesForChildren.csproj
@@ -277,6 +277,10 @@
     <Compile Include="Migrations\201801071256163_contract-eapprovation-enum.Designer.cs">
       <DependentUpon>201801071256163_contract-eapprovation-enum.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801072020212_contract-price-droped-11.cs" />
+    <Compile Include="Migrations\201801072020212_contract-price-droped-11.Designer.cs">
+      <DependentUpon>201801072020212_contract-price-droped-11.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Activity.cs" />
@@ -387,6 +391,7 @@
     <Content Include="Views\Activities\Edit.cshtml" />
     <Content Include="Views\Activities\Index.cshtml" />
     <Content Include="Views\Contracts\mainCreate.cshtml" />
+    <Content Include="Views\Contracts\CreateAdmin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -455,6 +460,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801071256163_contract-eapprovation-enum.resx">
       <DependentUpon>201801071256163_contract-eapprovation-enum.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801072020212_contract-price-droped-11.resx">
+      <DependentUpon>201801072020212_contract-price-droped-11.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
