--- a/SpacesForChildren/SpacesForChildren/SpacesForChildren.csproj
+++ b/SpacesForChildren/SpacesForChildren/SpacesForChildren.csproj
@@ -294,6 +294,10 @@
     <Compile Include="Migrations\201801080253495_service-in-contract-from-m-to-1v2.Designer.cs">
       <DependentUpon>201801080253495_service-in-contract-from-m-to-1v2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801080758069_evaluated-flag.cs" />
+    <Compile Include="Migrations\201801080758069_evaluated-flag.Designer.cs">
+      <DependentUpon>201801080758069_evaluated-flag.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Activity.cs" />
@@ -492,6 +496,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801080253495_service-in-contract-from-m-to-1v2.resx">
       <DependentUpon>201801080253495_service-in-contract-from-m-to-1v2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801080758069_evaluated-flag.resx">
+      <DependentUpon>201801080758069_evaluated-flag.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
